<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="login_label_username">User name</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_signin">Login</string>
    <string name="login_status_logging_in">Login now...</string>
    <string name="login_username_hint">Please input user name</string>
    <string name="login_register_link">No account?<a href="#">register</a></string>
    <string name="feedback">Feedback</string>
    <string name="added_favorite">Added to Favorites</string>
    <string name="app_name">Camera Demo</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_router">Router</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_light">Light</string>
    <string name="category_other">Misc</string>
    <string name="category_camera">Camera</string>
    <string name="current_pixel_format_tips">Current Pixel Format:</string>
    <string name="camera_pixel_format_setting">Camera Pixel Format Setting</string>
    <string name="pixel_format_tips">The higher then more clearly,but it require more band with to transmit the picture.</string>
    <string name="camera_setting_list">Camera Setting</string>
    <string name="category_computer">Computer</string>
    <string name="category_switch">Switch</string>
    <string name="category_speaker">speaker</string>
    <string name="category_zip">Zips</string>
    <string name="confirm">OK</string>
    <string name="confirm_know">OK</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="error_info_cant_send_folder">Unable to send the folder</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="install_failed">Installation failed</string>
    <string name="install_successful">Installation successful</string>
    <string name="instruction">Enter the following address into your FTP Client:</string>
    <string name="instruction_pre">Start service to enable FTP server</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="new_folder_name">New building</string>
    <string name="no">No</string>
    <string name="no_file">No Device</string>
    <string name="no_recent_list">No Message\nor\nRecent Device</string>
    <string name="no_wifi">No Wi-Fi network</string>
    <string name="no_wifi_hint">No Wi-Fi network, press to check WiFi settings</string>
    <string name="no_network_hint">No network connection,please open your network connections and try again</string>
    <string name="notif_server_starting">FTP Server started</string>
    <string name="notif_title">FTP Server</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_copy_path">Copy file path</string>
    <string name="operation_no_dev_notice">Please select at least one device</string>
    <string name="operation_camera_multi_dev_type_notice">Please select camera only</string>
    <string name="operation_create_folder">New house(room)</string>
    <string name="operation_add_device">Add device</string>
    <string name="operation_device_type">Device type</string>
    <string name="operation_add_device_name">Device name</string>
    <string name="operation_add_device_input_name_hint">Please input device name</string>
    <string name="operation_add_device_scan_input">Scan input</string>
    <string name="operation_add_device_input_uuid_hint">Please input UUID</string>
    <string name="operation_edit_device">edit device</string>
    <string name="operation_create_folder_message">Enter building name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_hide_sys">Hide hidden files</string>
    <string name="operation_info">Details</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Send</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="operation_top">Top</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="power_capacity_available">Power capacity available:<xliff:g id="available_size">%1$s</xliff:g></string>
    <string name="power_size">Power used:<xliff:g id="total_size">%1$s</xliff:g></string>
    <string name="sd_folder">SD card</string>
    <string name="dev_folder">Dev Tree</string>
    <string name="search_hint">Search Files</string>
    <string name="search_title">Search Files</string>
    <string name="start_server">Start Service</string>
    <string name="stop_server">Stop Service</string>
    <string name="storage_warning">External storage is not available or cannot be read</string>
    <string name="tab_category">Browse</string>
    <string name="tab_remote">User Information</string>
    <string name="tab_notice">Recent Notice</string>
    <string name="tab_devices">Devices</string>
    <string name="wifi_state">WLAN Status</string>
    <string name="yes">Yes</string>
    <string name="dialog_select_type">Select file type</string>
    <string name="dialog_type_text">Text</string>
    <string name="dialog_type_audio">Audio</string>
    <string name="dialog_type_video">Video</string>
    <string name="dialog_type_image">Image</string>
    <string name="favorite_photo">Photo</string>
    <string name="favorite_sdcard">SD Card</string>
    <string name="favourite_root">Root</string>
<string name="favorite_screen_cap">MIUI Screen Shot</string>
    <string name="favorite_ringtone">Ringtone</string>
    <string name="multi_select_title">Selected <xliff:g id="number">%1$s</xliff:g> item(s)</string>
    <string name="menu_setting">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="preference_title">General Settings</string>
    <string name="pref_primary_folder">Home folder</string>
    <string name="pref_read_root">Read root</string>
    <string name="pref_show_real_path">Display real path</string>
    <string name="default_primary_folder">/mnt/sdcard</string>
    <string name="pref_primary_folder_summary">The folder that appears when the app starts, and current value is <xliff:g id="string">%1$s</xliff:g></string>
    <string name="pref_show_real_path_summary">Show real path in navigation bar</string>
	<string name="dev_type_switcher_and_socket">switch and socket</string>
	<string name="dev_type_switch">switch</string>
	<string name="dev_type_outlet">outlet</string>
	<string name="dev_type_scene_panel">scene panel</string>
	<string name="dev_type_ir_control_unit">remote controller</string>
	<string name="dev_type_router">router</string>
	<string name="dev_type_light">light</string>
	<string name="dev_type_light_sensor">light sensor</string>
	<string name="dev_type_curtain_controller">curtain controller</string>
	<string name="dev_type_temperature_sensor">temperature sensor</string>
	<string name="dev_type_pressure_sensor">pressure sensor</string>
	<string name="dev_type_flow_rate_sensor">flow rate sensor</string>
	<string name="dev_type_camera">camera</string>
	<string name="dev_type_computer">computer</string>
	<string name="dev_type_speaker">speaker</string>
	<string name="dev_type_alarm">alarm</string>
	<string name="play">play</string>
    <string name="pause">pause</string>
    <string name="name">Name:</string>
    <string name="mode">Mode:</string>
    <string name="hw_res_out">OUT</string>
	<string name="hw_res_in">IN</string>
	<string name="hw_res_adc">ADC</string>
	<string name="hw_res_dac">DAC</string>
	<string name="hw_res_pwm">PWM</string>
	<string name="value">Value:</string>
	<string name="trigger">Trigger:</string>
	<string name="trigger_high">High</string>
	<string name="trigger_low">Low</string>
	<string name="trigger_rise_edge">Rise Edge</string>
	<string name="trigger_fall_edge">Fall Edge</string>
	<string name="gate_value">gate:</string>
    <string name="dev_status_ready">Ready</string>
    <string name="dev_attribute">Attribute</string>
    <string name="dev_tap_here_add_areaicon">Add new area</string>
    <string name="dev_tap_here_add_devicon">Add new device</string>
    <string name="hw_res">Hardware Resources</string>
    <string name="hw_subdev">Sub Devices</string>
    <string name="subdev_add_hw">Press here to add hardware(gpio).</string>
    <string name="subdev_add">Add Sub Device</string>
    <string name="subdev_hw">Sub Device Hardware Resources</string>
    <string name="subdev_hw_in">Input Hardware</string>
    <string name="subdev_hw_out">Output Hardware</string>
    <string name="content">Content</string>
    <string name="device_list">Camera</string>
    <string name="video_record_list">Video</string>
    <string name="photo_record_list">Picture</string>
    <string name="alarm_record_list">Alarm</string>
    <string name="preference_setting">About</string>
    <string name="more_sliding_menu">More</string>
    <string name="mode_outdoor">Outdoor mode</string>
    <string name="menu_ir_on">IR(ON)</string>
    <string name="menu_ir_off">IR(OFF)</string>
    <string name="hz50_window">Frequency (50HZ)</string>
    <string name="hz60_window">Frequency (60HZ)</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="exit_alert">Click OK to close the program. Press the Home button on your device to allow the program to run in the background. </string>
    <string name="showpwd">Show Password</string>
    <string name="wifi_ssid">SSID:</string>
    <string name="main_remote">Remote</string>
    <string name="main_phone">Phone</string>
    <string name="user">Account:</string>
    <string name="pwd">Password:</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="alogin">Login automatically</string>
    <string name="remberpwd">Remember password</string>
    <string name="saturation">Saturation</string>
    <string name="acutance">Acutance</string>
    <string name="constst">Contrast</string>
    <string name="vermirror">Vertical mirror</string>
    <string name="hormirror">Horizontal mirror</string>
    <string name="defaultset">Restore defaults</string>
    <string name="wifi_scan">Scan Wi-Fi Network</string>
    <string name="pin_text">Input PIN</string>
    <string name="start_config">Start</string>
</resources>