<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/creat_device_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
 　
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3.59"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/uuidtv"
	        android:layout_width="60dip"
	        android:layout_height="wrap_content"
	        android:text="UUID:" />
        
        <EditText
            android:id="@+id/uuid_edit"
            android:layout_width="140dip"
            android:layout_height="wrap_content"
            android:hint="@string/operation_add_device_input_uuid_hint" >
	
	        <requestFocus />
    	</EditText>

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_add_device_scan_input" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3.59"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/devtype"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/operation_device_type" />
        
        <freesbell.demo.client.ComboBox
            android:id="@+id/id_combobox"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3.59"
        android:orientation="horizontal" >
        <TextView
	        android:id="@+id/dev_name_txt"
	        android:layout_width="60dip"
	        android:layout_height="wrap_content"
	        android:text="@string/operation_add_device_name" />
        
        <EditText
	        android:id="@+id/dev_name_edit"
	       	android:layout_width="140dip"
	        android:layout_height="wrap_content"
	        android:hint="@string/operation_add_device_input_name_hint" >
	
    	</EditText>
    </LinearLayout>

</LinearLayout>