<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center" 
    android:background="@color/color_white">
   <TableLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingTop="10dip"
       android:paddingBottom="10dip"
       android:paddingLeft="5dip"
       android:paddingRight="5dip">
       <TableRow 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp">
           <TextView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:text="@string/user"
               android:gravity="center"
               android:layout_weight="1"
               android:textColor="@color/color_black"/>
           <EditText 
               android:id="@+id/loginuser"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:layout_marginRight="5dp"
               android:textColor="@color/color_black"/>
       </TableRow>
       <TableRow android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp">
           <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="18sp"
               android:text="@string/pwd"
               android:gravity="center"
               android:textColor="@color/color_black"
               android:layout_weight="1"/>
           <EditText android:id="@+id/loginpwd"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:layout_marginRight="5dp"
               android:textColor="@color/color_black"/>
       </TableRow>
      

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" 
            android:gravity="center">
          
           <TextView android:id="@+id/gerpwd"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="找回密码"
               android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/zidong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector" 
                android:text="@string/alogin"
                android:layout_weight="1"
                android:textColor="#333333"/>

           <!--  <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="自动登录"
                android:textColor="@color/color_black" /> -->

            <CheckBox
                android:id="@+id/jizhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:text="@string/remberpwd" 
                android:layout_weight="1"
                android:textColor="#333333"/>

           <!--  <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="记住密码"
                android:textColor="@color/color_black" /> -->
        
      </TableRow>
   </TableLayout>
   <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="3dp" >

            <Button
                android:id="@+id/loginuserpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/color_black" />

            <Button
                android:id="@+id/canceluserpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/color_black" />
        </LinearLayout>

</LinearLayout>