<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >
    
    
    
    <RelativeLayout 
        android:id="@+id/top_relativeLayout"
        style="@style/top_bg_style"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip">

        <TextView
            android:id="@+id/app_tv"
            android:textSize="18.0sp"
            android:textStyle="bold"
            android:textColor="@color/color_white" 
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/app_name"
            android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="12.0dip" 
            />
        <Button
            android:id="@+id/picture_phone"
            android:layout_toLeftOf="@+id/picture_remote"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical" 
            android:background="@drawable/btn_left_round"
            android:textColor="@color/color_white"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:text="@string/main_phone"/>
        
        <Button
            android:id="@+id/picture_remote"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_right_round_border"
            android:textColor="@color/color_white"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:text="@string/main_remote"  />
    </RelativeLayout>

    <ListView
        android:id="@+id/piclistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#00000000"
        android:cacheColorHint="#00000000"
       	android:divider="@color/color_divider"
        android:dividerHeight="1dp"
        android:fadeScrollbars="true"
        android:fadingEdge="none"
        android:fastScrollEnabled="true"
        android:listSelector="@drawable/listitem_pressed_selector" 
        >
    </ListView>
    
    <ImageView
        android:id="@+id/vidicon"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider" />
</LinearLayout>